<resources>
    <string name="app_name">Rickshaw Mitra</string>
    <string name="main_activity">Main activity</string>
    <string name="rickshaw_mitra">Rickshaw Mitra</string>
    <string name="to_do">TODO</string>
    <string name="sigingoogle">SIGN IN WITH GOOGLE</string>
    <string name="firebase_login">firebaselogin</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="banking">Banking</string>
    <string name="garage">Garage</string>
    <string name="nearby_mechanic">Nearby Mechanic</string>
    <string name="mechanic">Mechanic</string>
    <string name="police">Police</string>
    <string name="gas_station">Gas Station</string>
    <string name="hotel">Hotel</string>
    <string name="hospital">Hospital</string>
    <string name="kilometer">INR 56990</string>
    <string name="spare_part_shop">Spare Part Shop</string>
    <string name="buy_or_rent_rickshaw">Buy or Rent Rickshaw</string>
    <string name="todo">TODO</string>
    <string name="dileep">Dileep Mechanic</string>
    <string name="dileptime">Open at 9:00 Am to 9:00Pm</string>
    <string name="distance">500 M</string>
    <string name="title_activity_diliptab">diliptab</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="trouble_shoot">Trouble Shoot</string>
    <string name="news">News</string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="_9325798451">9325798451</string>
    <string name="rating">Rating</string>
    <string name="address">Address</string>
    <string name="dilipaddr">MIDC,phase I ,Khambalpada,New Kalyan Rd,Dombivli East,Thane,Maharashtra 421203</string>
    <string name="title_activity_dilipmaper">Map</string>
    <string name="guider_of_rickshaw_driver_s">Guider of Rickshaw Driver\'s</string>
    <string name="title_activity_maps">Map</string>
    <string name="guider_of_rickshaw_drivers">Guider of Rickshaw Drivers</string>
    <string name="r_r_hospital">R R Hospital</string>
    <string name="aims_hospital">AIMS Hospital</string>
    <string name="open_24_hours">Open: 24 Hours</string>
    <string name="_2_5_km">2.5 KM</string>
    <string name="kamat_hospital">Kamat Hospital</string>
    <string name="_2_6_km">2.6 KM</string>
    <string name="thakur_hospital">Thakur Hospital</string>
    <string name="_2_7_km">2.7 KM</string>
    <string name="_4_0_km">4.0 KM</string>
    <string name="venus_hospital">Venus Hospital</string>
    <string name="_1_9_km">1.9 KM</string>
    <string name="amruta_hospital">Amrut Hospital</string>
    <string name="srva_mamta_hospital">SRV Mamta Hospital</string>
    <string name="mahanagar_cng_pump">Mahanagar CNG Pump</string>
    <string name="bharat_petrol_amp_cng_pump"><![CDATA[Bharat Petrol & CNG Pump]]></string>
    <string name="usma_petrol_pump_cng"><![CDATA[Usma Petrol Pump & CNG]]></string>
    <string name="techno_petrol_pump_amp_cng"><![CDATA[Techno Petrol Pump & CNG]]></string>
    <string name="h_p_petrol_pump">H.P Petrol Pump</string>
    <string name="bharat_petroleum_petrol_pump">Bharat Petroleum Pump</string>
    <string name="ravi_auto_petrol_pump">Ravi Auto Petrol Pump</string>
    <string name="shakti_auto_parts_garage"><![CDATA[Shakti Auto Parts & Garage]]></string>
    <string name="diesel">When it comes to three-wheelers, the functioning of an engine depends mainly on engine oil.
        Ensure that the oil level is as per recommended level.
        Moreover, don’t get carried away by low prices and use cheap oil.
        It will only degrade your engine and increase maintenance cost.
        2T oil is recommended for auto rickshaws in most cases.
        It gives an easy start, cleans the engine, and helps in low maintenance.
        It lessens the deposit formation, rusting, and fouling of spark plug.
        However, there is a fixed ratio of oil and fuel.
        So, make sure you add the right amount of oil.
    </string>
    <string name="speed">The engine of a three-wheeler must we warmed up enough before taking it at high speed.
        So, it is a good practice to drive it at an ideal speed i.e. <b>35 to 40 km/h.</b>
        Driving it at such a low speed will ensure the longevity of your auto rickshaw.</string>
    <string name="airpressure">Inadequate amount of air pressure in tires may lead to serious problems while driving.
        For better performance and smooth riding, it is important for an auto rickshaw to have an optimum amount of air in tires.
        So, make sure you keep an eye on the tires regularly and make sure it has got sufficient amount of pressure.</string>
    <string name="braking">The braking system is one of the most important systems in three wheelers.
        Keep a regular check on it. Quite a few times, the dust gets accumulated in the brakes which hamper its functioning.
        So, make sure that there are sufficient braking fluids.\n
        \n<b>Make sure you keep in mind the above-mentioned tips and tricks to maintain your auto rickshaw and put them into practice.
            Maintaining your three-wheeler will make it not only more dependable and safer vehicle, but it will have less chance of breaking down and high value at the time of sale.
            Moreover, it will be a cleaner and environmental-friendly vehicle, contributing towards the greener world.
            Take care of your three-wheeler and it will take care of you!</b>
    </string>
    <string name="convince">Auto rickshaw drivers in our country make the most of the specific instances like peak hours,
        late night, and rainy days, when the consumer demand is quite high. Also, they convince customers to take an alternate route.
        So, make sure like other \n auto drivers, you negotiate well and convince commuters for a certain rate even before the trip starts.</string>
    <string name="negotion">Make sure your rickshaw is well-equipped with meters so that you can keep your commuters updated about the necessary details
        like distance, waiting time, and charges.
        These things are important for commuters to know the total charge of their trip.
</string>
    <string name="rickbattery"><b>Maintaining Your Rickshaw Batteries Battery is the spine of your Rickshaw,an important part of the vehicle which makes it to move from one place to another.
        It is the battery that your recharge and give momentum to your Rickshaw.Battery is therefore responsible for good performance and long life of your Rickshaw.
        Regular maintenance and care of the battery is very vital. Its regular maintenance paves way for its effective operation and longer life span.
        Here are some vital tips for maintaining your Rickshaw batteries:</b>\n
        1. See that the space where you install the battery in Rickshaw is well ventilated and has space for passage of air.
        Battery gets heated up during charging and operation.
        An airy place reduces the heating up of the battery and it reduces the water topping requirement.\n
2. Prior to installation, battery must be used on regular basis. It is better to discharge the battery once in every month and then recharge it.\n
 3. Check for the water level of the battery every two months and see to it that water level is maintained between the maximum and minimum water limit.\n
        Always top the battery with distilled water. Never use tap water or rain water as it contains excess amount of minerals and impurities that will affect the life and performance of the battery.\n
4. Always keep the surface and sides of the battery clean and dust free. Make use of cotton cloth to clean the surface.\n
 5. Keep the terminal of the battery corrosion and rust free.\n
        6. Vents around the battery should be dust free and open as blocked vents leads to accumulation of hydrogen gas that may further lead to bursting of the battery.\n
7. Replace the battery if it is dead or damaged and keep kids away while installing battery in the Rickshaw.\n
8. Inspect the battery regularly so that you can get idea of its condition and you will also be well aware if these are damaged or not.\n</string>
    <string name="finalmsg"><i>If you already drive an auto, make sure you implement above tips at the earliest.\n
        However, if you have not yet started the business, you can consider taking three-wheeler finance and then buy an auto rickshaw for yourself.
        There are a lot of options for auto loans in the market. So, make sure you get the best one and get going !</i></string>
    <string name="_7988515442">7988515442</string>
    <string name="aboutus1"><b>Rickshaw Mitra© <em>is developed in favor of Public interest</em></b>
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Developed by <b>Sajan</b> and <b>Amol</b>\n

    </string>
    <string name="trouble">
        Make sure that:\n
        1.You have enabled location service and location mode to &#160;<b>"High Accuracy"</b>\n
        2.Playstore version is above <b>8.0.</b>\n
        3.Updated Google maps\n
        4.You have active internet connection.\n
        &#160; &#160;&#160;&#160;&#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<i>Still Problem persist ?\n
         &#160; &#160;&#160;&#160;&#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Mail us on:-</i>


    </string>
    <string name="payment">Payment</string>
    <string-array name="group1">
        <item> <b>Offence</b>\u0020 <i>Driving without license</i></item>
        <item> <b>Act</b>\u0020 250(A)/177</item>
        <item> <b>Fine</b>\u0020 Rs.200/-</item>
    </string-array>
    <string-array name="group2">
        <item> <b>Offence</b> \u0020 >No Parking/Wrong side/Footpath/Double Parking </item>
        <item> <b>Act </b> \u0020 250(A)/177</item>
        <item> <b>Fine</b> \u0020 Rs.200/-</item>

    </string-array>
    <string-array name="group3">
        <item> <b>Offence</b> \u0020 Speeding </item>
        <item> <b>Act </b> \u0020 250(A)/177</item>
        <item> <b>Fine</b> \u0020 Rs.200/-</item>

    </string-array>
    <string-array name="group4">
        <item> <b>Offence</b> \u0020 Vehicle without reflector or tail light </item>
        <item> <b>Act </b> \u0020 250(A)/177</item>
        <item> <b>Fine</b> \u0020 Rs.200/-</item>

    </string-array>
    <string-array name="group5">
        <item> <b>Offence</b> \u0020 Lane Cutting </item>
        <item> <b>Act </b> \u0020 250(A)/177</item>
        <item> <b>Fine</b> \u0020 Rs.200/-</item>

    </string-array>
    <string-array name="group6">
        <item> <b>Offence</b> \u0020 Drunk Driving </item>
        <item> <b>Act </b> \u0020 250(A)/177</item>
        <item> <b>Fine</b> \u0020 Rs.200/-</item>
    </string-array>
    <string name="mitrarickshaw0716_gmail_com">mitrarickshaw0716@gmail.com</string>
    <string name="instruction"><b>If you are not able to access application,make sure you have followed these below instructions:</b></string>
</resources>