<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SagarMechFragmentAbout">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:layout_marginStart="31dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="371dp"
        android:text="@string/phone"
        android:textColor="#131111"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="232dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="371dp"
        android:autoLink="phone"
        android:linksClickable="true"
        android:text="@string/_9325798451"
        android:textColor="#0E0C0C"
        android:textStyle="normal|bold"
         />




    <TextView
        android:id="@+id/textView7"
        android:layout_width="94dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="285dp"
        android:text="@string/address"
        android:textColor="#352F2F"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="253dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="-24dp"
        android:layout_marginBottom="252dp"
        android:text="@string/dilipaddr"
        android:textColor="#352F2F"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="183dp"
        android:text="@string/rating"
        android:textColor="#0C0C0C"
        android:textStyle="normal|bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="173dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.1" />


</RelativeLayout>